crates/pardosa-genome/tests/compile_fail/arc_genome_safe.stderr
error[E0277]: the trait bound `Arc<String>: GenomeSafe` is not satisfied
 --> tests/compile_fail/arc_genome_safe.rs:7:14
  |
7 |     let _ = <std::sync::Arc<String> as GenomeSafe>::SCHEMA_HASH;
  |              ^^^^^^^^^^^^^^^^^^^^^^ the trait `GenomeSafe` is not implemented for `Arc<String>`
  |
  = help: the following other types implement trait `GenomeSafe`:
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
          and $N others
